# MiniGrad

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Iter.cpp  Iter.h  LICENSE  Operations.cpp  Operations.h  Ops.cpp  Ops.h  ReadMe.md  Substance.cpp  Substance.h  Tensor.cpp  Tensor.h  doctest.h  main.cpp  makefile  nn.cpp  nn.h  temp.cpp  temp.py  tests.cpp
